@@ -135,6 +135,7 @@ context "Site Template" do
       section         = options[:section] || site.sections.home
       assert_equal(expected_template_name.nil? ? nil : site.templates[expected_template_name], site.send(:set_content_template, section, template_type))
     end
+
     def assert_site_layout_name(expected_template_name, template_type = nil, options = {})
       template_type ||= expected_template_name
       site            = options[:site] || sites(:first)
